# halcon-license-fetcher

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: detect.rs  github.rs  install.rs  license.rs  main.rs  service.rs
